# tradeNexplore

./: .gitignore  README.md  notebook.ipynb  notebook_executed.ipynb  pyproject.toml  results.json  skills-lock.json  walk_forward_results.json
docs/: ARCHITECTURE.md  ARCHITECTURE_ALGORITHM_INTERFACE.md  ARCHITECTURE_BACKTESTER.md  EXPERIMENT_PLAN.md  EXPERIMENT_RESULTS.md  PART2_PLAN.md  PROJECT_STATUS.md
exp/: AGENT.md  DIRECTION_RESEARCH.md  EXECUTIVE_SUMMARY.md  FINAL_REPORT.md  INDEX.md  KNOWN_ISSUES.md  PITFALLS.md  RESULTS_TABLE.md  USABLE.md  basin_analysis.json  equity_curves.json  fee_sensitivity.md  gp_budget_test.md  gp_budget_test.py  gp_convergence_partial.json  seed_robustness.json
exp/01-ablation/: report_zh.md
exp/02-walk_forward/: CAUTION.md  README.md  report_zh.md  results.json  run.py
exp/03-robust_opt/: report_zh.md  results.json
exp/04-comparison/: CAUTION.md  extended_comparison_results.json  report_zh.md  results.json  run.py
exp/05-moe/: run.py
exp/06-position/: report_zh.md
exp/07-pso-tradeoff/: results.json
exp/08-pso-inertia/: results.json
exp/09-gp-parsimony/: report_zh.md  results.json  run.py
exp/10-position-scale/: CAUTION.md  report_zh.md  results.json  run.py
results/: experiment_1_results.json  experiment_2_results.json  experiment_3_results.json
tests/: test_adapters.py  test_algorithms.py  test_backtester.py  test_data_loader.py  test_experiments.py  test_filters.py  test_run_all.py  test_strategy.py  test_strategy_extended.py
tiny_bot/: __init__.py  backtest.py  data.py  experiment.py  filters.py  gp.py  pso.py  strategy.py
(+144 files in other folders)
