[project]
name = "tiny-bot"
version = "0.1.0"
description = "Minimal PSO + GP trading bot on BTC data"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "yfinance",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tiny_bot"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
]
